# bot

./: .gitignore  .scrutinizer.yml  README.md  bot.py  requirements.txt  run.py  setup.cfg  start.sh
.github/workflows/: codeql-analysis.yml
app/: __init__.py  bot.py
app/cogs/: __init__.py  info.py
app/commands/: __init__.py  about.py  help.py  help_command.py  pan.py  ping.py  pypi_dl.py  say.py
cogs/: dev.py  fun.py  info.py
pincer_bot/: __init__.py  __main__.py  bot.py  constants.py
pincer_bot/classes/: pypi.py
pincer_bot/cogs/: dev.py  fun.py  info.py  react.py
pincer_bot/core/: command.py
pincer_bot/tasks/: get_pypi_downloads.py
