
[metadata]
name = PincerBot
description = Pincer Discord bot
author = Pincer-org
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    pincer_bot
install_requires =
    pincer
    python-dotenv
    psutil
    requests
python_requires = >=3.8
zip_safe = no

[options.package_data]
pincer_bot = py.typed

[flake8]
max-line-length = 80
